Group picks and auto pick selection

--- a/www/views/detail-quiniela-live.hbs
+++ b/www/views/detail-quiniela-live.hbs
@@ -1,5 +1,5 @@
 
-	<div id="detailQuinielaRegistered" data-id="{{data.pool.id}}" data-entry="{{data.pool.entry_id}}" class="content quiniela_single quiniela_registrada_single">
+	<div id="detailQuinielaRegistered" data-id="{{data.pool.id}}" data-entry="{{data.pool.entry_id}}" data-weekid="{{data.pool.week_id}}" class="content quiniela_single quiniela_registrada_single">
 		
 		<a class="link_wrapper">
 			<div class="quiniela {{# if data.pool.upcoming}}quiniela_open{{/ if}} 
