--- a/www/views/partials/tabs/scoreboard.hbs
+++ b/www/views/partials/tabs/scoreboard.hbs
@@ -1,22 +1,115 @@
-	<div class="tab tab_posiciones clearfix">
-		<table>
-			<tr class="table_title">
-				<th>POS</th>
-				<th>JUGADOR</th>
-				<th>ACIERTOS</th>
-				<th>A GANAR</th>
-			</tr>
-			<tr class="player_info">
-				<td>1</td>
-				<td class="player"><img src="{{cordova_full_path}}images/profile_placeholder.png"> Lorem Ipsum 123</td>
-				<td>12</td>
-				<td class="ganar"><img src="{{cordova_full_path}}images/billete.png">$1,234</td>
-			</tr>
-			<tr class="player_info">
-				<td>1</td>
-				<td class="player"><img src="{{cordova_full_path}}images/profile_placeholder.png"> Lorem Ipsum 123</td>
-				<td>12</td>
-				<td class="ganar"><img src="{{cordova_full_path}}images/billete.png">$1,234</td>
-			</tr>
-		</table>
-	</div><!-- posiciones -->
+	
+	<div class="tab tab_marcadores clearfix">
+		<div class="marcador clearfix">
+			<table>
+				<tr>
+					<th>Finalizado</th>
+					<th>1</th>
+					<th>2</th>
+					<th>3</th>
+					<th>4</th>
+					<th>T</th>
+				</tr>
+				<tr>
+					<td>OAK</td>
+					<td>7</td>
+					<td>14</td>
+					<td>7</td>
+					<td>10</td>
+					<td>38</td>
+				</tr>
+				<tr>
+					<td>OAK</td>
+					<td>7</td>
+					<td>14</td>
+					<td>7</td>
+					<td>10</td>
+					<td>38</td>
+				</tr>
+			</table>
+		</div><!-- marcador -->
+		<div class="marcador clearfix">
+			<table>
+				<tr>
+					<th>Finalizado</th>
+					<th>R</th>
+					<th>H</th>
+					<th>E</th>
+					<th></th>
+					<th>T</th>
+				</tr>
+				<tr>
+					<td>LAD</td>
+					<td>14</td>
+					<td>21</td>
+					<td>0</td>
+					<td></td>
+					<td>28</td>
+				</tr>
+				<tr>
+					<td>NYY</td>
+					<td>7</td>
+					<td>14</td>
+					<td>1</td>
+					<td></td>
+					<td>7</td>
+				</tr>
+			</table>
+		</div><!-- marcador -->
+		<div class="marcador clearfix">
+			<table>
+				<tr>
+					<th>Finalizado</th>
+					<th></th>
+					<th>1</th>
+					<th>2</th>
+					<th></th>
+					<th>T</th>
+				</tr>
+				<tr>
+					<td>AME</td>
+					<td></td>
+					<td>1</td>
+					<td>0</td>
+					<td></td>
+					<td>1</td>
+				</tr>
+				<tr>
+					<td>MTY</td>
+					<td></td>
+					<td>1</td>
+					<td>1</td>
+					<td></td>
+					<td>2</td>
+				</tr>
+			</table>
+		</div><!-- marcador -->
+		<div class="marcador clearfix">
+			<table>
+				<tr>
+					<th>Finalizado</th>
+					<th>1</th>
+					<th>2</th>
+					<th>3</th>
+					<th>4</th>
+					<th>T</th>
+				</tr>
+				<tr>
+					<td>OAK</td>
+					<td>7</td>
+					<td>14</td>
+					<td>7</td>
+					<td>10</td>
+					<td>38</td>
+				</tr>
+				<tr>
+					<td>OAK</td>
+					<td>7</td>
+					<td>14</td>
+					<td>7</td>
+					<td>10</td>
+					<td>38</td>
+				</tr>
+			</table>
+		</div><!-- marcador -->
+	</div>
