--- a/www/views/detail-quiniela.hbs
+++ b/www/views/detail-quiniela.hbs
@@ -1,52 +1,55 @@
 
-	<div id="detailQuiniela" data-id="{{data.id}}" class="content quiniela_single clearfix">
+	<div id="detailQuiniela" data-id="{{data.pool.id}}" data-entry="{{data.pool.entry_id}}" data-weekid="{{data.pool.week_id}}" class="content quiniela_single clearfix">
 		<a class="link_wrapper">
 			<div class="quiniela
-			{{# if data.upcoming}}quiniela_open{{/ if}} 
-			{{# if data.live}}quiniela_live{{/ if}} 
-			{{# if_eq data.status 'live'}}quiniela_live{{/ if_eq}} 
-			{{# if data.closed}}quiniela_closed{{/ if}} {{data.sport.name}}
-			{{# if_eq data.format "natural" }} natural {{/ if_eq }} garantizado clearfix">
+			{{# if data.pool.upcoming}}quiniela_open{{/ if}} 
+			{{# if data.pool.live}}quiniela_live{{/ if}} 
+			{{# if_eq data.pool.status 'live'}}quiniela_live{{/ if_eq}} 
+			{{# if data.pool.closed}}quiniela_closed{{/ if}} {{data.pool.sport.name}}
+			{{# if_eq data.pool.format "natural" }} natural {{/ if_eq }} garantizado clearfix">
 				<div class="quiniela_header clearfix">
 					<div class="quiniela_iconos clearfix">
-						{{# if_eq data.point_format "line" }}
+						<img src="{{cordova_full_path}}images/{{data.pool.sport.icon}}.png">
+						{{# if_eq data.pool.point_format "line" }}
 							<img src="{{cordova_full_path}}images/linea.png">
 						{{/ if_eq }}
-						{{# if_eq data.point_format "natural" }}
+						{{# if_eq data.pool.point_format "natural" }}
 							<img src="{{cordova_full_path}}images/natural.png">
 						{{/ if_eq }}
-						<img src="{{cordova_full_path}}images/{{data.sport.icon}}.png">
 					</div><!-- iconos -->
-					<h2>{{data.name_replaced}}</h2>
+					<h2>{{data.pool.name_replaced}}</h2>
 				</div><!-- quiniela_header -->
 				<div class="quiniela_content clearfix">
-
 					<div class="quiniela_info clearfix">
-						<span class="registros">REGISTROS: {{data.entry_count}}</span>
-						<span {{# if_less data.time_left 86400}}data-countdown="{{data.deadline_tz}}"{{/ if_less }} class="cierre">CIERRE: {{^ if_less data.time_left 86400}}{{formatDate data.deadline_tz 'lll'}}{{/ if_less }}</span>
-						{{# data.limited_capacity}}
-							<span class="limite">Limitado a {{data.max_entries}} entradas</span>
-						{{/ data.limited_capacity}}
-						{{# data.closed}}
+						<span class="registros">REG: {{data.pool.entry_count}}</span>
+						<span class="cierre">{{^ if data.pool.closed}}CIERRE{{/ if}}{{# if data.pool.closed}}CERRÓ{{/ if}}: {{formatDate data.pool.deadline_tz 'lll'}}</span>
+						{{# data.pool.limited_capacity}}
+							<span class="limite">Limitado a {{data.pool.max_entries}} entradas</span>
+						{{/ data.pool.limited_capacity}}
+						{{# data.pool.closed}}
 							<span class="limite">FINALIZÓ</span>
-						{{/ data.closed}}
+						{{/ data.pool.closed}}
+						{{# if_eq status "live"}}
+							<span class="live">EN CURSO</span>
+						{{/ if_eq}}
 					</div><!-- quiniela_info -->
+					
 					<div class="quiniela_entrada clearfix">
 						<span class="titulo">ENTRADA</span>
-						{{# if_eq data.entry_currency 'real' }}
+						{{# if_eq data.pool.entry_currency 'real' }}
 							<img src="{{cordova_full_path}}images/billecoin.png">
 						{{/ if_eq }}
-						{{# if_eq data.entry_currency 'pickcoin' }}
+						{{# if_eq data.pool.entry_currency 'pickcoin' }}
 							<img src="{{cordova_full_path}}images/pickcoin.png">
 						{{/ if_eq }}
-						<span class="number">${{ formatCurrency data.entry_fee}}</span>
+						<span class="number">${{ formatCurrency data.pool.entry_fee}}</span>
 					</div>
 					<div class="quiniela_bolsa clearfix">
 						<span class="titulo">BOLSA</span>
-						{{# if data.guaranteed_prize}}
+						{{# if data.pool.guaranteed_prize}}
 							<img src="{{cordova_full_path}}images/garantizado.png">
 						{{/ if }}
-						<span class="number">${{ formatCurrency data.available}}</span>
+						<span class="number">${{ formatCurrency data.pool.available}}</span>
 					</div>
 				</div><!-- quiniela_content -->
 			</div><!-- quiniela -->
