--- a/www/views/profile.hbs
+++ b/www/views/profile.hbs
@@ -76,7 +76,7 @@
 						<input name="cvv2" id="cvv2" type="text" placeholder="CVV" data-openpay-card="cvv2">
 					</div>
 					<div class="submit_holder">
-						<input type="submit" value="send">
+						<a id="savePicks" class="green_button">Agregar tarjeta</a>
 					</div>
 				</form>
 			</div><!-- backed_modal -->
